src/parser/parser.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/

"use strict";

var ast = require("../parser/ast.js");



  const Ast = ast.Ast;
  const cons = ast.cons;
  const optionalPairAst = ast.optionalPairAst;
  const leftBinaryAst = ast.leftBinaryAst;
  const opMap = ast.opMap;

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Atom: peg$parseAtom, Ex: peg$parseEx, Expr: peg$parseExpr, Start: peg$parseStart, Def: peg$parseDef };
  var peg$startRuleFunction = peg$parseAtom;

  var peg$c0 = ":=";
  var peg$c1 = ":=>";
  var peg$c2 = "(";
  var peg$c3 = ")";
  var peg$c4 = ",";
  var peg$c5 = "=>";
  var peg$c6 = "||";
  var peg$c7 = "&&";
  var peg$c8 = "==";
  var peg$c9 = "=";
  var peg$c10 = "!=";
  var peg$c11 = "<";
  var peg$c12 = "<=";
  var peg$c13 = ">=";
  var peg$c14 = ">";
  var peg$c15 = "++";
  var peg$c16 = "@";
  var peg$c17 = "$";
  var peg$c18 = "?";
  var peg$c19 = "::";
  var peg$c20 = "^";
  var peg$c21 = "**";
  var peg$c22 = "{";
  var peg$c23 = "}";
  var peg$c24 = "[";
  var peg$c25 = "]";
  var peg$c26 = ":";
  var peg$c27 = "\\";
  var peg$c28 = "\"";
  var peg$c29 = "'";
  var peg$c30 = ".";

  var peg$r0 = /^[$?-@_]/;
  var peg$r1 = /^[*-+\--\/\^]/;
  var peg$r2 = /^[+\-]/;
  var peg$r3 = /^[*.-\/]/;
  var peg$r4 = /^[nrt\\"']/;
  var peg$r5 = /^[0-7]/;
  var peg$r6 = /^[xX]/;
  var peg$r7 = /^[0-9a-fA-F]/;
  var peg$r8 = /^[^\\"\n\r]/;
  var peg$r9 = /^[^\\'\n\r]/;
  var peg$r10 = /^[a-z]/;
  var peg$r11 = /^[a-zA-Z0-9_]/;
  var peg$r12 = /^[_]/;
  var peg$r13 = /^[A-Za-z]/;
  var peg$r14 = /^[A-Z]/;
  var peg$r15 = /^[0-9]/;
  var peg$r16 = /^[eE]/;
  var peg$r17 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation(":=", false);
  var peg$e1 = peg$literalExpectation(":=>", false);
  var peg$e2 = peg$otherExpectation("a let definition or a macro definition");
  var peg$e3 = peg$literalExpectation("(", false);
  var peg$e4 = peg$literalExpectation(")", false);
  var peg$e5 = peg$literalExpectation(",", false);
  var peg$e6 = peg$otherExpectation("a Fun expression (anonymous function) or Let expression");
  var peg$e7 = peg$literalExpectation("=>", false);
  var peg$e8 = peg$otherExpectation("an infix operator");
  var peg$e9 = peg$classExpectation(["$", ["?", "@"], "_"], false, false);
  var peg$e10 = peg$literalExpectation("||", false);
  var peg$e11 = peg$literalExpectation("&&", false);
  var peg$e12 = peg$literalExpectation("==", false);
  var peg$e13 = peg$literalExpectation("=", false);
  var peg$e14 = peg$literalExpectation("!=", false);
  var peg$e15 = peg$literalExpectation("<", false);
  var peg$e16 = peg$literalExpectation("<=", false);
  var peg$e17 = peg$literalExpectation(">=", false);
  var peg$e18 = peg$literalExpectation(">", false);
  var peg$e19 = peg$literalExpectation("++", false);
  var peg$e20 = peg$classExpectation([["*", "+"], ["-", "/"], "^"], false, false);
  var peg$e21 = peg$literalExpectation("@", false);
  var peg$e22 = peg$literalExpectation("$", false);
  var peg$e23 = peg$literalExpectation("?", false);
  var peg$e24 = peg$literalExpectation("::", false);
  var peg$e25 = peg$classExpectation(["+", "-"], false, false);
  var peg$e26 = peg$classExpectation(["*", [".", "/"]], false, false);
  var peg$e27 = peg$otherExpectation("a unary - or + operator");
  var peg$e28 = peg$literalExpectation("^", false);
  var peg$e29 = peg$literalExpectation("**", false);
  var peg$e30 = peg$otherExpectation("a function application, a parenthesized expression, a function, or a list, tuple, map or atom");
  var peg$e31 = peg$otherExpectation("a comma-separated list of two or more items");
  var peg$e32 = peg$otherExpectation("a tuple");
  var peg$e33 = peg$otherExpectation("a map");
  var peg$e34 = peg$literalExpectation("{", false);
  var peg$e35 = peg$literalExpectation("}", false);
  var peg$e36 = peg$otherExpectation("a list");
  var peg$e37 = peg$literalExpectation("[", false);
  var peg$e38 = peg$literalExpectation("]", false);
  var peg$e39 = peg$otherExpectation("a list, map, atom");
  var peg$e40 = peg$otherExpectation("an object key");
  var peg$e41 = peg$otherExpectation("a colon-separated key-value pair");
  var peg$e42 = peg$literalExpectation(":", false);
  var peg$e43 = peg$otherExpectation("an expression");
  var peg$e44 = peg$otherExpectation("atom");
  var peg$e45 = peg$otherExpectation("an escaped character");
  var peg$e46 = peg$literalExpectation("\\", false);
  var peg$e47 = peg$classExpectation(["n", "r", "t", "\\", "\"", "'"], false, false);
  var peg$e48 = peg$classExpectation([["0", "7"]], false, false);
  var peg$e49 = peg$classExpectation(["x", "X"], false, false);
  var peg$e50 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false);
  var peg$e51 = peg$otherExpectation("a string");
  var peg$e52 = peg$literalExpectation("\"", false);
  var peg$e53 = peg$classExpectation(["\\", "\"", "\n", "\r"], true, false);
  var peg$e54 = peg$literalExpectation("'", false);
  var peg$e55 = peg$classExpectation(["\\", "'", "\n", "\r"], true, false);
  var peg$e56 = peg$otherExpectation("a symbol");
  var peg$e57 = peg$classExpectation([["a", "z"]], false, false);
  var peg$e58 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e59 = peg$classExpectation(["_"], false, false);
  var peg$e60 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false);
  var peg$e61 = peg$otherExpectation("a tag");
  var peg$e62 = peg$classExpectation([["A", "Z"]], false, false);
  var peg$e63 = peg$otherExpectation("a decimal number");
  var peg$e64 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e65 = peg$literalExpectation(".", false);
  var peg$e66 = peg$classExpectation(["e", "E"], false, false);
  var peg$e67 = peg$otherExpectation("a natural number");
  var peg$e68 = peg$otherExpectation("optional whitespace");
  var peg$e69 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(sym, op, body) {
    return Ast(location(), op === ":=" ? "Def" : "Macro",
      [sym]
      .concat([body])
      );
    };
  var peg$f1 = function(sym1, op, sym2, assignOp, body) {
    // assign code to an infix operator
    return Ast(location(), assignOp === ":=" ? "Def" : "Macro",
      [op]
      .concat([ Ast(location(), "List", [sym1, sym2]) ])
      .concat([body])
      );
    };
  var peg$f2 = function(sym, syms, op, body) {
    return Ast(location(), op === ":=" ? "Def" : "Macro",
      [sym]
      .concat([Ast(location(), "List", syms.map(function(x) { return x[0]; }))])
      .concat([body])
      );
    };
  var peg$f3 = function(sym, op, body) {
    return Ast(location(), op === ":=" ? "Def" : "Macro",
      [sym]
      .concat([Ast(location(), "List", [])])
      .concat([body])
    );
  };
  var peg$f4 = function(sym, args, op, body) {
    return Ast(location(), op === ":=" ? "Def" : "Macro",
      [sym]
      .concat([Ast(location(), "List", args)])
      .concat([body])
    );
  };
  var peg$f5 = function(uno) { return uno; };
  var peg$f6 = function(head, tail) {
  return [head].concat(tail.map(function(x) { return x[1]; }));
};
  var peg$f7 = function(uno) { return uno; };
  var peg$f8 = function(head, tail) { return cons(head, tail.map(function(x) { return x[3]; })); };
  var peg$f9 = function(head, tail) { return cons(head, tail.map(function(x) { return x[3]; })); };
  var peg$f10 = function(body) { return Ast(location(), "Fun", [Ast(location(), "List", []), body]); };
  var peg$f11 = function(sym, body) { return Ast(location(), "Fun", [Ast(location(), "List", [sym]), body]); };
  var peg$f12 = function(args, body) { return Ast(location(), "Let", [Ast(location(), "List", args), body]); };
  var peg$f13 = function(args, body) { return Ast(location(), "Fun", [Ast(location(), "List", args), body]); };
  var peg$f14 = function(o) { return Ast(location(), "Tag", [opMap[o]]); };
  var peg$f15 = function(head, tail) { return leftBinaryAst(location(), head, tail); };
  var peg$f16 = function(head, tail) { return optionalPairAst(location(), head, tail); };
  var peg$f17 = function(head, tail) { return leftBinaryAst(location(), head, tail); };
  var peg$f18 = function(head, tail) { return optionalPairAst(location(), head, tail); };
  var peg$f19 = function(head, tail) { return optionalPairAst(location(), head, tail); };
  var peg$f20 = function(head, tail) { return optionalPairAst(location(), head, tail); };
  var peg$f21 = function(head, tail) { return optionalPairAst(location(), head, tail); };
  var peg$f22 = function(head, tail) { return leftBinaryAst(location(), head, tail); };
  var peg$f23 = function(head, tail) { return leftBinaryAst(location(), head, tail); };
  var peg$f24 = function(head, tail) { return Ast(location(), head === "-" ? "Neg" : "Pos", [tail]); };
  var peg$f25 = function(head, tail) { return optionalPairAst(location(), head, tail); };
  var peg$f26 = function(head, tail) { return cons(head, tail.map(function(x) { return x[3]; })); };
  var peg$f27 = function(head) { return Ast(location(), "@", [head]); };
  var peg$f28 = function(head) { return Ast(location(), "@", [head]); };
  var peg$f29 = function(head, items) { return Ast(location(), "@", cons(head, items));};
  var peg$f30 = function(head, items) { return Ast(location(), "@", cons(head, items));};
  var peg$f31 = function(head, items) { return Ast(location(), "@", cons(head, items));};
  var peg$f32 = function(o) { return o; };
  var peg$f33 = function(e) { return e; };
  var peg$f34 = function(head, tail) { return cons(head, tail.map(function(x) { return x[3]; })); };
  var peg$f35 = function(items) { return Ast(location(), 'Tuple', items); };
  var peg$f36 = function(pairs) { return Ast(location(), 'Map', pairs.map(function(x) { return x[1]; })) };
  var peg$f37 = function(items) { return Ast(location(), 'List', items.map(function(x) { return x[1]; })) };
  var peg$f38 = function(key, mol) { return Ast(location(), "Pair", [key, mol]); };
  var peg$f39 = function() {1,3};
  var peg$f40 = function() {
    if (text() === '\\n') return '\n';
    if (text() === '\\r') return '\r';
    if (text() === '\\t') return '\t';
    // TODO handle unicode escapes
    // TODO handle octal escapes
    // TODO handle hex escapes
    // TODO handle unicode escapes
    // TODO handle other escape sequences
    return text().substring(1); // remove the leading backslash
  };
  var peg$f41 = function(chars) {
    return Ast(location(), 'Str', [chars.join('')]);
  };
  var peg$f42 = function(chars) {
    return Ast(location(), 'Str', [chars.join('')]);
  };
  var peg$f43 = function() { return Ast(location(), 'Sym', [text()]); };
  var peg$f44 = function() { return Ast(location(), 'Sym', [text()]); };
  var peg$f45 = function() { return Ast(location(), 'Tag', [text()]); };
  var peg$f46 = function() { return Ast(location(), 'Dec', [text()]); };
  var peg$f47 = function() { return Ast(location(), 'Dec', [text()]); };
  var peg$f48 = function() { return Ast(location(), 'Dec', [text()]); };
  var peg$f49 = function() { return Ast(location(), 'Dec', [text()]); };
  var peg$f50 = function() { return Ast(location(), 'Nat', [text()]); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0;

    s0 = peg$parseDef();

    return s0;
  }

  function peg$parseAssignOp() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c0) {
      s0 = peg$c0;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 3) === peg$c1) {
        s0 = peg$c1;
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
    }

    return s0;
  }

  function peg$parseDef() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
